tests/functional/lang/eval-fail-genericClosure-keys-uncomparable.err.exp
error:
       … while calling the 'genericClosure' builtin
         at /pwd/lang/eval-fail-genericClosure-keys-uncomparable.nix:1:1:
            1| builtins.genericClosure {
             | ^
            2|   startSet = [

       … while comparing the `key` attributes of two genericClosure elements

       error: cannot compare a set with a set; values of that type are incomparable
